More js reduction, security update for wordpress

--- a/config/nginx/security.conf
+++ b/config/nginx/security.conf
@@ -9,7 +9,7 @@ location /ali.txt {
     return 400 "Bad request - ignoring";
   }
 }
- 
+
  # block all requests for .bak, .cer, .env, .git, .rar, .svn, many different .zip files
  location ~* \.(bak|cer|env|git|gitignore|pub|rar|sh|svn)$|/(backup_.*|backup|directory|index|latest|public_html|wallet|website|wwwroot)\.zip$ {
    return 400;
@@ -81,8 +81,18 @@ if ($http_x_forwarded_for ~* "\b(jndi:|oast.fun)\b") {
     return 400;
 }
 
+## determine if this is a rails site (vs the insights blog)
+set $is_rails_site 1;
+if ($request_uri ~* "insights") {
+    set $is_rails_site 0;
+}
+
 ## blocking overloaded page parameter that is not a number up to 4 digits
+set $bad_page_param 0;
 if ($request_uri ~* "[?&]page=\d{0,4}[^\d&]") {
+    set $bad_page_param 1$is_rails_site;
+}
+if ($bad_page_param = 11) {
     return 400;
 }
 
