Martin companion mobile redirect

--- a/config/nginx/martin.conf
+++ b/config/nginx/martin.conf
@@ -371,5 +371,7 @@ server {
   location ~* /en-US/sustainability { return 301 https://www.harman.com/sustainability; }
   location ~* /zh/sustainability { return 301 https://www.harman.com/sustainability; }
 
+  location = /products/martin-companion-mobile { return 301  /en/products/companion-mobile; }
+
   include /var/www/brandsites/current/tmp/redirects/martin_redirects.config;
 }
